# uplcio

./: .bash_aliases  .gitignore  CMakeLists.txt  README.md  demo.cpp  pyproject.toml  test.py
.denv/: .gitignore  config
src/: uplcio.cpp
src/uplcio/: __init__.py  _cpp.py
tests/: conftest.py  test_basic_headers.py  test_demo.py  test_link.py
uplcio_cpp/: CMakeLists.txt  pyproject.toml  test.py  uplcio_cpp.cpp
uplcio_cpp/src/: EventHeader.cpp  EventHeader.h  MCParticle.cpp  ReadOnlyBranch.cpp  ReadOnlyBranch.h  ReadOnlyFile.cpp  ReadOnlyFile.h  demo.cpp  demo.h  layout_builder_common.h  python.cpp  snapshot.h  uplcio_cpp.cpp
